force-app/main/default/objects/breg_Fee__c/breg_Fee__c.object-meta.xml
<CustomObject>
    <description>Aalta BREG-933</description>
    <label>Fee</label>
    <nameField>
        <displayFormat>Fee-{000000}</displayFormat>
        <label>Fee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>