force-app/main/default/objects/breg_Fee__c/fields/breg_Case_Code__c.field-meta.xml
<CustomField>
    <fullName>breg_Case_Code__c</fullName>
    <description>Aalta BREG-933</description>
    <label>Case Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AC</fullName>
            </value>
            <value>
                <fullName>ADD</fullName>
            </value>
            <value>
                <fullName>AMRS</fullName>
            </value>
            <value>
                <fullName>ANN</fullName>
            </value>
            <value>
                <fullName>ART</fullName>
            </value>
            <value>
                <fullName>COA</fullName>
            </value>
            <value>
                <fullName>FLLC</fullName>
            </value>
            <value>
                <fullName>FLLP</fullName>
            </value>
            <value>
                <fullName>FLP</fullName>
            </value>
            <value>
                <fullName>FPRS</fullName>
            </value>
            <value>
                <fullName>LLC</fullName>
            </value>
            <value>
                <fullName>LLP</fullName>
            </value>
            <value>
                <fullName>LP</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>NC</fullName>
            </value>
            <value>
                <fullName>ODC</fullName>
            </value>
            <value>
                <fullName>PRS</fullName>
            </value>
            <value>
                <fullName>RGNC</fullName>
            </value>
            <value>
                <fullName>RS</fullName>
            </value>
            <value>
                <fullName>TNAS</fullName>
            </value>
            <value>
                <fullName>TNNA</fullName>
            </value>
            <value>
                <fullName>TNRN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>