force-app/main/default/objects/breg_Fee__c/fields/breg_Cashier_Code__c.field-meta.xml
<CustomField>
    <fullName>breg_Cashier_Code__c</fullName>
    <description>Aalta BREG-933</description>
    <label>Cashier Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B11</fullName>
            </value>
            <value>
                <fullName>B13</fullName>
            </value>
            <value>
                <fullName>B14</fullName>
            </value>
            <value>
                <fullName>B15</fullName>
            </value>
            <value>
                <fullName>B17</fullName>
            </value>
            <value>
                <fullName>B18</fullName>
            </value>
            <value>
                <fullName>B19</fullName>
            </value>
            <value>
                <fullName>B20</fullName>
            </value>
            <value>
                <fullName>B21</fullName>
            </value>
            <value>
                <fullName>B22</fullName>
            </value>
            <value>
                <fullName>B23</fullName>
            </value>
            <value>
                <fullName>B24</fullName>
            </value>
            <value>
                <fullName>B29</fullName>
            </value>
            <value>
                <fullName>B30</fullName>
            </value>
            <value>
                <fullName>B31</fullName>
            </value>
            <value>
                <fullName>B32</fullName>
            </value>
            <value>
                <fullName>B33</fullName>
            </value>
            <value>
                <fullName>B34</fullName>
            </value>
            <value>
                <fullName>B35</fullName>
            </value>
            <value>
                <fullName>B36</fullName>
            </value>
            <value>
                <fullName>B48</fullName>
            </value>
            <value>
                <fullName>B49</fullName>
            </value>
            <value>
                <fullName>B52</fullName>
            </value>
            <value>
                <fullName>B53</fullName>
            </value>
            <value>
                <fullName>B54</fullName>
            </value>
            <value>
                <fullName>B66</fullName>
            </value>
            <value>
                <fullName>B70</fullName>
            </value>
            <value>
                <fullName>B71</fullName>
            </value>
            <value>
                <fullName>B72</fullName>
            </value>
            <value>
                <fullName>B73</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>