force-app/main/default/objects/breg_Fee__c/fields/breg_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>breg_Fee_Amount__c</fullName>
    <description>Aalta BREG-933</description>
    <label>Fee Amount</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>