force-app/main/default/objects/breg_Fee__c/fields/breg_Fee_Code__c.field-meta.xml
<CustomField>
    <fullName>breg_Fee_Code__c</fullName>
    <description>Aalta BREG-933</description>
    <label>Fee Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A-ARCHIVE</fullName>
            </value>
            <value>
                <fullName>AC-D/F1/04</fullName>
            </value>
            <value>
                <fullName>AC-D/F2/04</fullName>
            </value>
            <value>
                <fullName>AC-GP/04</fullName>
            </value>
            <value>
                <fullName>AC-LLC/04</fullName>
            </value>
            <value>
                <fullName>AC-LLP/04</fullName>
            </value>
            <value>
                <fullName>AC-LP/04</fullName>
            </value>
            <value>
                <fullName>A-COOP-1-05</fullName>
            </value>
            <value>
                <fullName>A-COOP-2-05</fullName>
            </value>
            <value>
                <fullName>AM/04</fullName>
            </value>
            <value>
                <fullName>AM-D1/04</fullName>
            </value>
            <value>
                <fullName>AM-D2/04</fullName>
            </value>
            <value>
                <fullName>AM-LLP/04</fullName>
            </value>
            <value>
                <fullName>AMNC-C5/04</fullName>
            </value>
            <value>
                <fullName>AMNC-D1/04</fullName>
            </value>
            <value>
                <fullName>AMNC-D2/04</fullName>
            </value>
            <value>
                <fullName>AMRS-C5/04</fullName>
            </value>
            <value>
                <fullName>AMRS-D1/04</fullName>
            </value>
            <value>
                <fullName>AMRS-D2/04</fullName>
            </value>
            <value>
                <fullName>ANN-GEN/04</fullName>
            </value>
            <value>
                <fullName>ANN-LLP PF</fullName>
            </value>
            <value>
                <fullName>ANN-LLP/04</fullName>
            </value>
            <value>
                <fullName>ANN-LPF</fullName>
            </value>
            <value>
                <fullName>ANN-NPROF04</fullName>
            </value>
            <value>
                <fullName>ANN-PF</fullName>
            </value>
            <value>
                <fullName>ANN-PROF04</fullName>
            </value>
            <value>
                <fullName>ANN-ULLC04</fullName>
            </value>
            <value>
                <fullName>ANY-LLP/04</fullName>
            </value>
            <value>
                <fullName>ANY-NPROF04</fullName>
            </value>
            <value>
                <fullName>ANY-PROF/04</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>