force-app/main/default/objects/breg_Fee__c/fields/breg_Form_Code__c.field-meta.xml
<CustomField>
    <fullName>breg_Form_Code__c</fullName>
    <label>Form Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Form_Codes</valueSetName>
    </valueSet>
</CustomField>