force-app/main/default/objects/breg_Fee__c/fields/breg_Form_Configuration__c.field-meta.xml
<CustomField>
    <fullName>breg_Form_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Aalta BREG-933</description>
    <label>Form Configuration</label>
    <referenceTo>breg_Form_Configuration__c</referenceTo>
    <relationshipLabel>Fees</relationshipLabel>
    <relationshipName>breg_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>