force-app/main/default/objects/breg_Fee__c/fields/breg_Is_Able_to_Certify_Online__c.field-meta.xml
<CustomField>
    <fullName>breg_Is_Able_to_Certify_Online__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Aalta BREG-933</description>
    <label>Is Able to Certify Online</label>
    <type>Checkbox</type>
</CustomField>