force-app/main/default/objects/breg_Fee__c/fields/breg_Is_Request_Printed__c.field-meta.xml
<CustomField>
    <fullName>breg_Is_Request_Printed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Aalta BREG-933</description>
    <label>Is Request Printed</label>
    <type>Checkbox</type>
</CustomField>