force-app/main/default/objects/breg_Fee__c/fields/breg_Purchase_Type_Fee_type__c.field-meta.xml
<CustomField>
    <fullName>breg_Purchase_Type_Fee_type__c</fullName>
    <description>Aalta BREG-933</description>
    <label>Purchase Type/Fee type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alert</fullName>
            </value>
            <value>
                <fullName>Annual Filing Fee</fullName>
            </value>
            <value>
                <fullName>Archive Fees</fullName>
            </value>
            <value>
                <fullName>Certificate</fullName>
            </value>
            <value>
                <fullName>Certify</fullName>
            </value>
            <value>
                <fullName>Document</fullName>
            </value>
            <value>
                <fullName>Expedite Fees</fullName>
            </value>
            <value>
                <fullName>Form Fees</fullName>
            </value>
            <value>
                <fullName>Late Fees</fullName>
            </value>
            <value>
                <fullName>Reminder</fullName>
            </value>
            <value>
                <fullName>Penalty Fees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>