force-app/main/default/objects/breg_Fee__c/fields/breg_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>breg_Record_Type__c</fullName>
    <description>Aalta BREG-933</description>
    <label>Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agent List</fullName>
            </value>
            <value>
                <fullName>Annual Reminder</fullName>
            </value>
            <value>
                <fullName>Assignment of PR</fullName>
            </value>
            <value>
                <fullName>Assignment of TN/TM/SM</fullName>
            </value>
            <value>
                <fullName>Business Alerts</fullName>
            </value>
            <value>
                <fullName>Entity</fullName>
            </value>
            <value>
                <fullName>Entity List</fullName>
            </value>
            <value>
                <fullName>Officer/Director/Manager/Member/Partner</fullName>
            </value>
            <value>
                <fullName>Publicity Rights</fullName>
            </value>
            <value>
                <fullName>Publicity Rights Name</fullName>
            </value>
            <value>
                <fullName>Service Mark</fullName>
            </value>
            <value>
                <fullName>TN/TM/SM</fullName>
            </value>
            <value>
                <fullName>TNTMSM Reminder</fullName>
            </value>
            <value>
                <fullName>Trade Name</fullName>
            </value>
            <value>
                <fullName>Trade Name, Trademark, Service Mark</fullName>
            </value>
            <value>
                <fullName>Trademark</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>