force-app/main/default/objects/breg_Fee__c/fields/breg_Suffix__c.field-meta.xml
<CustomField>
    <fullName>breg_Suffix__c</fullName>
    <label>Suffix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>