force-app/main/default/objects/breg_Fee__c/fields/breg_Transaction_Description__c.field-meta.xml
<CustomField>
    <fullName>breg_Transaction_Description__c</fullName>
    <description>Aalta BREG-933</description>
    <label>Transaction Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>