force-app/main/default/objects/breg_Fee__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <description>Used for mass upload fees. [&quot;Entity Type (if Applicable)&quot;]&quot;-&quot;[&quot;Form #/Suffix&quot;]&quot;-&quot;[&quot;Purchase Type/Fee type&quot;]</description>
    <externalId>true</externalId>
    <label>Unique Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>