force-app/main/default/objects/breg_Fee__c/listViews/Entity_List.listView-meta.xml
<ListView>
    <fullName>Entity_List</fullName>
    <columns>NAME</columns>
    <columns>breg_Case_Code__c</columns>
    <columns>breg_Cashier_Code__c</columns>
    <columns>breg_Business_Structure__c</columns>
    <columns>breg_Fee_Amount__c</columns>
    <columns>breg_Fee_Code__c</columns>
    <columns>breg_Form_Configuration__c</columns>
    <columns>breg_Is_Able_to_Certify_Online__c</columns>
    <columns>breg_Is_Purchaseable_Document__c</columns>
    <columns>breg_Is_Request_Printed__c</columns>
    <columns>breg_Record_Type__c</columns>
    <columns>breg_Purchase_Type_Fee_type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>breg_Record_Type__c</field>
        <operation>equals</operation>
        <value>Entity List</value>
    </filters>
    <label>Entity List</label>
</ListView>