force-app/main/default/objects/breg_Fee__c/listViews/Form_Fees.listView-meta.xml
<ListView>
    <fullName>Form_Fees</fullName>
    <columns>NAME</columns>
    <columns>breg_Fee_Amount__c</columns>
    <columns>breg_Form_Code__c</columns>
    <columns>breg_Entity_Type__c</columns>
    <columns>breg_Purchase_Type_Fee_type__c</columns>
    <columns>breg_Cashier_Code__c</columns>
    <columns>breg_Business_Structure__c</columns>
    <columns>breg_Is_Able_to_Certify_Online__c</columns>
    <columns>breg_Is_Purchaseable_Document__c</columns>
    <columns>breg_Is_Request_Printed__c</columns>
    <filterScope>Everything</filterScope>
    <label>Form Fees</label>
</ListView>